--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
     document.addEventListener('DOMContentLoaded', () => {
       const textElement = document.querySelector('#text');
       if (textElement) {
-        ityped.init(textElement, { strings: [' آغاز شد عجله کنید،عجله کنید', ' آغاز شد عجله کنید،عجله کنید'] });
+        ityped.init(textElement, { strings: [' آغاز شد بشتابید بشتابید', ' آغاز شد بشتابید،بشتابید'] });
       }
     });
   </script>
