--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>mozhdah.second</title>
+  <title>london tour</title>
 
 
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
@@ -48,22 +48,22 @@
 
       <div x-data="countdown()" class="row countdown justify-content-center my-5">
         <div>
-          <h3 class="fw-bold" x-text="days">00</h3>
+          <h3 class="fw-bold" x-text="days">45</h3>
           <h5>روز</h5>
         </div>
 
         <div>
-          <h3 class="fw-bold" x-text="hours">00</h3>
+          <h3 class="fw-bold" x-text="hours">60</h3>
           <h5>ساعت</h5>
         </div>
 
         <div>
-          <h3 class="fw-bold" x-text="minutes">00</h3>
+          <h3 class="fw-bold" x-text="minutes">20</h3>
           <h5>دقیقه</h5>
         </div>
 
         <div>
-          <h3 class="fw-bold" x-text="seconds">00</h3>
+          <h3 class="fw-bold" x-text="seconds">30</h3>
           <h5>ثانیه</h5>
         </div>
       </div>
